# WCU

./: CMakeLists.txt  ship_classes.prompt
assets/: settings.json
assets/universe/: universe.json
shaders/: vertex.glsl
src/: audio.cpp  audio.h  cargo.h  factions.h  main.cpp  menu.cpp  menu.h  text_renderer.cpp  text_renderer.h
src/gfx/: mesh.h  terrain.h
src/space/: bases.h  jumppoints.h  planets.h  stars.h
src/universe/: quadrant.h  sector.h  star_system.h  universe.cpp  universe.h
